--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@ header > .desc{
   height: 70px;
   color: white;
   border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
 }
 .won{
@@ -48,6 +52,11 @@ header > .desc{
 }
 .loss{
   background-color: #BA2A2A;
+}
+.farewellMsg{
+  background-color: #7A5EA7;
+  border: 1px dotted white;
+
 }
 
 .lang-container{
@@ -79,15 +88,21 @@ header > .desc{
     background-color: rgba(0, 0, 0, 0.7);
 }
 .span-container{
-    text-align: center;
-    padding-top: 20px;
-    margin-top: 10px;
+  display: flex;
+  justify-content: center;
+    margin-top: 30px;
 }
 .span-container >span{
-    padding:10px 20px;
+    width: 50px;
+    height: 40px;
+    padding-top:5px;
     background-color: #323232;
     border-bottom: 2px solid #F9F4DA;
     margin: 1.5px;
+}
+.wrong-char{
+  color: #BA2A2A;
+  font-weight: 600;
 }
 .keyboard-container{
         display: flex;
@@ -99,7 +114,7 @@ header > .desc{
 }
 .keyboard-container > button{
   background-color: #FCBA29;
-  width: 35px;
+  width: 37px;
   height: 35px;
   border-radius: 3px;
   font-size: 1.12rem;
@@ -107,6 +122,10 @@ header > .desc{
   border: 1px solid #D7D7D7;
   cursor: pointer;
 
+}
+.keyboard-container > button:disabled{
+  cursor: not-allowed;
+  opacity: 0.5;
 }
 button.correct{
   background-color: #10A95B;
@@ -123,6 +142,14 @@ button.wrong{
   cursor: pointer;
     padding: 6px 12px;
 }
-#disabled-key{
-  pointer-events: none;
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
