--- a/src/App.css
+++ b/src/App.css
@@ -5,28 +5,25 @@
 }
 .container{
   height: 100vh;
-  padding: 20px;
-
+  width: 400px;
+  padding: 10px;
 }
 header{
-  max-width:  500px;
-
-  font-family: 'Founders_Grotesk_X-condensed';
+  width: 100%;
+  margin-top: 20px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-weight: 500;
   line-height: 15px;
   text-align: center;
-  padding: 0px 80px;
 }
 main{
   padding: 60px 0;
   text-align: center;
-  width: 500px;
-  /* display:flex; */
   flex-direction: column;
   gap: 20px;
   justify-content: center;
-  padding-inline: 20px;
   height: 220px;
+  width: 100%;
 }
 header > h3{
   font-size: 20px;
@@ -34,17 +31,19 @@ header > h3{
 }
 header > .desc{
   color: #8E8E8E;
-  font-size: 14px;
+  font-size: 1rem;
+  padding-inline: 50px;  
 }
 .game-status{
-  width: 450px;
+  width: 100%;
   height: 70px;
   color: white;
   border-radius: 6px;
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 20px;
 
 }
 .won{
@@ -56,7 +55,6 @@ header > .desc{
 .farewellMsg{
   background-color: #7A5EA7;
   border: 1px dotted white;
-
 }
 
 .lang-container{
@@ -64,10 +62,8 @@ header > .desc{
     flex-wrap: wrap;
     gap: 5px;
     justify-content: center;
-    max-width: 350px;
+    width: 100%;
     margin-bottom: 36px;
-    margin:10px 0 0 40px ;
- 
 }
 .lang-chip{
     border-radius: 3px;
@@ -116,8 +112,8 @@ header > .desc{
   background-color: #FCBA29;
   width: 37px;
   height: 35px;
-  border-radius: 3px;
-  font-size: 1.12rem;
+  border-radius: 5px;
+  font-size: 1.3rem;
   color: black;
   border: 1px solid #D7D7D7;
   cursor: pointer;
@@ -140,7 +136,8 @@ button.wrong{
   border: 1px solid #D7D7D7;
   border-radius: 4px;
   cursor: pointer;
-    padding: 6px 12px;
+   padding: 6px 12px;
+    margin-top: 12px;
 }
 .sr-only {
     position: absolute;
@@ -152,4 +149,16 @@ button.wrong{
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
+}
+@media (max-width:400px) {
+  .container{
+    width: 100vw;
+  }
+  .keyboard-container > button{
+    width: 52px;
+  }
+  .newGame-btn{
+  width: 200px;
+ 
+  }
 }
